plugins {
    id 'application'
    id 'checkstyle'
    id 'jacoco'
    id 'pmd'
    id 'com.github.ben-manes.versions' version '0.51.0'
    id 'info.solidsoft.pitest' version '1.15.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.owasp.dependencycheck' version '10.0.4'
    id 'org.sonarqube' version '7.2.3.7755'
    id 'org.springframework.boot' version '3.5.13'
    id 'uk.gov.hmcts.java' version '0.12.68'
    id 'au.com.dius.pact' version '4.6.20'
    id "io.freefair.lombok" version "9.2.0"
    id 'net.serenity-bdd.serenity-gradle-plugin' version '5.3.9'
}

apply plugin: 'java'
apply plugin: 'project-report'
apply plugin: 'idea'

mainClassName = 'uk.gov.hmcts.reform.iacasedocumentsapi.Application'
def jarName = 'ia-case-documents-api.jar'

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            '-parameters',
            '-Xlint:deprecation',
            '-Xlint:unchecked'
    ]
}

tasks.withType(Test).configureEach {
    useJUnitPlatform {}

    testLogging {
        exceptionFormat = 'full'
    }
}

sourceSets {

    integrationTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/integrationTest/java')
        }
        resources.srcDir file('src/integrationTest/resources')
    }

    functionalTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/functionalTest/java')
        }
        resources.srcDir file('src/functionalTest/resources')
    }

    smokeTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/smokeTest/java')
        }
        resources.srcDir file('src/smokeTest/resources')
    }
    contractTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/contractTest/java')
        }
        resources.srcDir file('src/contactTest/resources')
    }
}

processFunctionalTestResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

processIntegrationTestResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

idea {
    module {
        testSources.from(
                project.sourceSets.integrationTest.java.srcDirs,
                project.sourceSets.functionalTest.java.srcDirs,
                project.sourceSets.smokeTest.java.srcDirs,
                project.sourceSets.contractTest.java.srcDirs
        )
        testResources.from(
                project.sourceSets.integrationTest.resources.srcDirs,
                project.sourceSets.functionalTest.resources.srcDirs,
                project.sourceSets.smokeTest.resources.srcDirs,
                project.sourceSets.contractTest.resources.srcDirs
        )
    }
}

configurations {
    integrationTestImplementation.extendsFrom testImplementation
    integrationTestCompile.extendsFrom testCompile
    integrationTestRuntime.extendsFrom testRuntime
    functionalTestImplementation.extendsFrom testImplementation
    functionalTestCompile.extendsFrom testCompile
    functionalTestRuntime.extendsFrom testRuntime
    contractTestImplementation.extendsFrom testImplementation
    contractTestCompile.extendsFrom testCompile
    contractTestRuntime.extendsFrom testRuntime
}

checkstyle {
    maxWarnings = 0
    toolVersion = '10.12.5'
    configDirectory.set(new File(rootDir, 'config/checkstyle'))
}


pmd {
    toolVersion = '6.55.0'
    ignoreFailures = true
    sourceSets = [sourceSets.main, sourceSets.test, sourceSets.integrationTest, sourceSets.functionalTest, sourceSets.smokeTest]
    reportsDir = file("${project.getLayout().getBuildDirectory()}/reports/pmd")
    ruleSets = [
            'category/java/bestpractices.xml'
    ]
}

tasks.register('integration', Test) {
    description = 'Runs the integration tests.'
    group = 'Verification'
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
}

tasks.register('functional', Test) {
    description = 'Runs the functional tests.'
    group = 'Verification'

    systemProperty "scenario", System.getProperty('scenario')
    systemProperty "file.encoding", "UTF-8"

    testClassesDirs = sourceSets.functionalTest.output.classesDirs
    classpath = sourceSets.functionalTest.runtimeClasspath
    finalizedBy aggregate
    testLogging {
        showStackTraces = true
        showStandardStreams = true
        showCauses = true
        showExceptions = true
    }
}

tasks.register('smoke', Test) {
    description = 'Runs the smoke tests.'
    group = 'Verification'
    testClassesDirs = sourceSets.smokeTest.output.classesDirs
    classpath = sourceSets.smokeTest.runtimeClasspath
}


tasks.register('contract', Test) {
    description = 'Runs the pact contract tests.'
    group = 'Verification'
    description = "Runs the consumer Pact tests"
    useJUnitPlatform()
    testClassesDirs = sourceSets.contractTest.output.classesDirs
    classpath = sourceSets.contractTest.runtimeClasspath
}

tasks.register('fortifyScan', JavaExec) {
    description = 'Run fortify scan.'
    mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
    classpath += sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

project.ext {
    pactVersion = getCheckedOutGitCommitHash()
}

jacoco {
    toolVersion = "0.8.13"
}

jacocoTestReport {
    executionData(test, integration)
    reports {
        xml.required.set(true)
        csv.required.set(false)
        xml.outputLocation.set(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
    }
}

pitest {
//    print('./gradlew --version'.execute().text.trim())
    junit5PluginVersion = '1.2.3'
    pitestVersion = "1.16.2"
    targetClasses = ['uk.gov.hmcts.reform.iacasedocumentsapi.*']
    excludedClasses = [
            'uk.gov.hmcts.reform.iacasedocumentsapi.infrastructure.config.*',
            'uk.gov.hmcts.reform.iacasedocumentsapi.Application',
            'uk.gov.hmcts.reform.iacasedocumentsapi.infrastructure.TsvStringProvider'
    ]
    threads = 10
    outputFormats = ['XML', 'HTML']
    timestampedReports = false
    failWhenNoMutations = false
    verbose = true
    mutationThreshold = 85
}

tasks.named('pitest') {
    group = "Verification"
}

sonarqube {
    properties {
        property "sonar.projectName", "IA :: Immigration & Asylum case documents api"
        property "sonar.projectKey", "IACASEDOCUMENTSAPI"
        property "sonar.coverage.jacoco.xmlReportPaths", layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml").get().asFile
        property "sonar.pitest.mode", "reuseReport"
        property "sonar.pitest.reportsDirectory", "build/reports/pitest"
        property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/iacasedocumentsapi/infrastructure/config/**," +
                "src/main/java/uk/gov/hmcts/reform/iacasedocumentsapi/infrastructure/SystemDateProvider.java," +
                "src/main/java/uk/gov/hmcts/reform/iacasedocumentsapi/Application.java"
        property "sonar.cpd.exclusions", "src/main/java/uk/gov/hmcts/reform/iacasedocumentsapi/domain/entities/AsylumCase.java," +
                "src/main/java/uk/gov/hmcts/reform/iacasedocumentsapi/domain/entities/AsylumCaseBuilder.java," +
                "src/main/java/uk/gov/hmcts/reform/iacasedocumentsapi/domain/templates/**"
    }
}

tasks.named('sonarqube') {
    dependsOn(test, integration, jacocoTestReport)
    group = "Verification"
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
    }
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2025.0.2'
    }
    dependencies {
        dependencySet(group: 'org.junit.jupiter', version: '5.13.4') {
            entry 'junit-jupiter'
            entry 'junit-jupiter-api'
            entry 'junit-jupiter-engine'
            entry 'junit-jupiter-params'
        }

        dependencySet(group: 'org.junit.platform', version: '1.13.4') {
            entry 'junit-platform-commons'
            entry 'junit-platform-engine'
            entry 'junit-platform-launcher'
        }

        dependencySet(group: 'org.yaml', version: '2.4') {
            entry 'snakeyaml'
        }

        dependencySet(group: 'commons-fileupload', version: '1.6.0') {
            entry 'commons-fileupload'
        }


        dependencySet(group: 'com.fasterxml.jackson.core', version: '2.19.2') {
            entry 'jackson-databind'
            entry 'jackson-core'
            entry 'jackson-annotations'
        }

        dependencySet(group: 'com.fasterxml.jackson.dataformat', version: '2.19.2') {
            entry 'jackson-dataformat-yaml'
            entry 'jackson-dataformat-csv'
        }

        dependencySet(group: 'com.fasterxml.jackson.datatype', version: '2.19.2') {
            entry 'jackson-datatype-jsr310'
            entry 'jackson-datatype-jdk8'
        }
    }
}

dependencies {
    modules {
        module("org.codehaus.groovy:groovy") {
            replacedBy("org.apache.groovy:groovy", "conflicts in current rest-assured version")
        }
        module("org.codehaus.groovy:groovy-xml") {
            replacedBy("org.apache.groovy:groovy-xml", "conflicts in current rest-assured version")
        }
        module("org.codehaus.groovy:groovy-json") {
            replacedBy("org.apache.groovy:groovy-json", "conflicts in current rest-assured version")
        }
    }

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'org.springframework.security:spring-security-oauth2-client'
    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
    implementation 'org.springframework.security:spring-security-oauth2-jose'
    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '10.9'

    // CVE-2021-27568
    implementation group: 'net.minidev', name: 'json-smart', version: '2.6.0'

    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'com.fasterxml.jackson.core:jackson-core'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.core:jackson-annotations'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.17'

    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.32'
    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.5.32'
    implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '9.0'

    implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '4.0.7'

    implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'
    implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '8.0.0'
    implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.3'

    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'
    implementation group: 'commons-io', name: 'commons-io', version: '2.21.0'

    implementation group: "jakarta.servlet", name: "jakarta.servlet-api", version: "6.1.0"

    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '10.1.54'
    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.1.54'

    implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '7.13.2'
    implementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.59.2'
    implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'

    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.23.0'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.23.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation group: 'org.pitest', name: 'pitest', version: '1.16.2'
    testImplementation group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: '1.5.0'
    testImplementation group: 'io.rest-assured', name: 'rest-assured-all', version: '5.5.7'
    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.5.7'
    testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: '5.3.9'
    testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: '5.3.9'
    testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: '5.3.9'
    testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: '5.3.9'

    testImplementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'

    testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.10', classifier: 'all', {
        exclude group: 'commons-io', module: 'commons-io'
        exclude group: 'org.apache.commons', module: 'commons-lang3'
    }

    testImplementation 'pl.pragmatists:JUnitParams:1.1.1'

    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'

    //pact contract testing
    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: "4.6.20"

    integrationTestImplementation sourceSets.main.runtimeClasspath
    integrationTestImplementation sourceSets.test.runtimeClasspath

    functionalTestImplementation sourceSets.main.runtimeClasspath
    functionalTestImplementation sourceSets.test.runtimeClasspath

    smokeTestImplementation sourceSets.main.runtimeClasspath
    smokeTestImplementation sourceSets.test.runtimeClasspath

    contractTestImplementation sourceSets.main.runtimeClasspath
    contractTestImplementation sourceSets.test.runtimeClasspath

}

pact {
    publish {
        pactDirectory = 'target/pacts'
        pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
        tags = [System.getenv("PACT_BRANCH_NAME") ?: 'Dev']
        version = project.pactVersion
    }
}

dependencyCheck {
    suppressionFile = 'https://raw.githubusercontent.com/hmcts/ia-owasp-suppressions/refs/heads/master/ia-case-documents-api/suppressions.xml'
}

dependencyUpdates.resolutionStrategy = {
    componentSelection { rules ->
        rules.all { ComponentSelection selection ->
            boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
                selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
            }
            if (rejected) {
                selection.reject('Release candidate')
            }
        }
    }
}

static def getCheckedOutGitCommitHash() {
    'git rev-parse --verify --short HEAD'.execute().text.trim()
}

gradle.startParameter.continueOnFailure = true

bootJar {
    setArchiveFileName(jarName)
    manifest {
        attributes('Implementation-Version': project.version.toString())
    }
}

// this is required to force Java running on the Azure Windows Server OS into using
// UTF-8 as the default character set instead of windows-1252 which causes issues.
// this setting only applies when running via gradle bootRun -- see web.config for the
// java flag that configures the deployed appllications
applicationDefaultJvmArgs = ["-Dfile.encoding=UTF-8"]

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}

